# krs-pos

./: Dockerfile  LICENSE  README.md  compose.yaml  dbshell.sh
api/: .env  Cargo.toml  README.md  config.toml  gen_schema.sh  main.go  rust-toolchain.toml
api/.sqlx/: query-0a8a33447fd8031cc4767d4808c9f241173620a86c754649477794ec4325766c.json  query-a4881c2b3cb35ba84a64095dc973a8a86bad98985da182e072666dc1c6c17b42.json
api/migrations/: 20231027074848_init.down.sql  20231027074848_init.up.sql
api/src/: config.rs  lib.rs  main.rs  model.rs
api/src/db/: mod.rs
api/src/db/seaorm/: mod.rs
api/src/db/seaorm/entities/: mod.rs  order_assigned.rs  order_delivered.rs  order_group.rs  order_payed.rs  order_queued.rs  order_ready.rs  orders.rs  prelude.rs  price.rs
web/: package.json  pnpm-lock.yaml
web/html/: 0_topping.html  1_payment.html  2_change.html  a_chef.html  aa_monitor_payment.html  b_show_order_numbers.html  c_deliver.html  common.js  index.html  template.html  z9_internal_change_price.html  値段変更.html  厨房番号表示.html  呼び出し画面修正版.html  店側テンキー.html  店側トッピング画面.html  店側メニュー選択.html  店側待ち番号発行.html  待ちと呼び出し画面.html  調理側の仮UI.html
