[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6", features = ["macros", "ws"] }
chrono = "0.4.31"
dotenv = "0.15.0"
sea-orm = { version = "0.12.4", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33", features = ["full"] }
toml = "0.8.5"
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.7"
features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "macros",
    "uuid",
]
